# Portfolio-Backend

./: .dockerignore  .gitignore  Dockerfile  README.md  db.sqlite3  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml
portfolio/: pagination.py  settings.py  urls.py
projects/: admin.py  data.py  middleware.py  models.py  serializers.py  urls.py  views.py
projects/migrations/: 0001_initial.py  0002_remove_project_image_projectimage.py  0003_alter_project_download_file_alter_projectimage_image.py  0004_profile.py  0005_profile_project_profile_role_and_more.py  0006_alter_profile_unique_together_profile_projects_and_more.py  0007_remove_profile_projects.py  0008_remove_project_category_project_categories.py  0009_requestlog.py  0010_remove_requestlog_device_type_requestlog_device_info.py  0011_profile_experience_years.py  0012_requestlog_referer.py  0013_requestlog_ip_addresses.py
