[tool.poetry]
name = "portfolio"
version = "0.1.0"
description = ""
authors = ["shudipta-majumder <shudiptamazumdar@gmail.com>"]
packages = [{include = "portfolio"}]

[tool.poetry.dependencies]
python = ">=3.12"
django = "^5.2"
djangorestframework = "^3.16.0"
pillow = "^11.2.1"
django-cors-headers = "^4.7.0"
gunicorn = "^23.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
